# egraphs

./: .gitignore  README.md  egraphs.py  example.py  pyproject.toml
