[tool.poetry]
name = "egraphs"
version = "0.1.0"
description = ""
authors = ["Eirol <74545840+eirol@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
